[gd_scene load_steps=3 format=3 uid="uid://c443kxbgrt23s"]

[ext_resource type="Script" path="res://Scripts/Inventory/inventory_dialog.gd" id="1_fdvss"]
[ext_resource type="PackedScene" uid="uid://b2teacee44gnl" path="res://Scenes/Inventory/item_slot.tscn" id="2_3wsld"]

[node name="InventoryDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdvss")
slot_scene = ExtResource("2_3wsld")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "x"

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
